# B5

W6/: README.md  pyproject.toml
content/W1/: index.qmd
content/W1/exercises/: python_complete_quiz.ipynb
content/W1/lessons/: 01_bootcamp_intro.qmd  02_ide_setup.qmd
content/W2/: index.qmd
student/: chap01.ipynb
student/C1/: chap01.ipynb  chap02.ipynb  chap03.ipynb  chap04.ipynb  chap05.ipynb  chap07.ipynb  chap09.ipynb  chap10.ipynb  chap14.ipynb  chap15.ipynb  chap16.ipynb  f1_indexing_problems.ipynb  f2_ceasar_cipher_problem.ipynb  f3_docs_random_problem.ipynb  f4_requests_ex.ipynb
